--- a/index.html
+++ b/index.html
@@ -46,21 +46,12 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
-
-  
-  
-
-
-
-
- 
-  
-
 </head>
 
 <body>
 
-  <div class="container bg-light" id="search-banner">
+  <div class="container-fluid bg-light" id="search-banner">
+
     <div class="row" style="margin-top: inherit">
       <p>
       <h2>En İyi Oteller ve En Özel Anlar İçin</h2>
@@ -71,21 +62,23 @@
 
     <div class="row">
       <div class="col col-md-3">
-        <input type="search">
+        <input type="search" class="formelementsstyle" id="searchinput">
       </div>
 
-      <div class="col col-md-3">
-        <input type="text" name="daterange" value="01/01/2018 - 01/15/2018" />
-      </div>
-
-
-      <div class="col col-md-3">
-        <button class="btn btn-primary" type="button" style="min-width: 200px;"> +2 Yetişkin </button>
+      <div class="col col-md-3 ">
+        <input type="text" name="daterange" value="01/01/2018 - 01/15/2018" class="formelementsstyle" />
       </div>
 
 
+      <div class="col col-md-3 ">
+        <button class="btn btn-light
+         formelementsstyle" type="button" style="min-width: 200px;"> +2 Yetişkin </button>
+      </div>
+
+
       <div class="col col-md-3">
-        <button class="btn btn-primary" type="button" style="min-width: 200px;"> Otelleri Listele</button>
+        <button class="btn btn-primary" type="button" id="listHotelsButton" style="max-width: 293px;"> Otelleri
+          Listele</button>
       </div>
       <div class="row" id="hoteladvertmessage">
         <p>
@@ -97,34 +90,38 @@
     <div class="row" id="images-row">
 
 
-      <div class="col col-md-3"> </div>
-      <div class="col col-md-1">
+      <div class="col col-md-3 smallpics"> </div>
+      <div class="col col-md-1 ">
 
         <img src="https://cdn.pixabay.com/photo/2018/02/24/17/17/window-3178666_960_720.jpg" class="imgh">
       </div>
 
-      <div class="col col-md-1">
+      <div class="col col-md-1 smallpics">
         <img src="https://cdn.pixabay.com/photo/2018/02/24/17/17/window-3178666_960_720.jpg" class="imgh">
       </div>
 
-      <div class="col col-md-1">
+      <div class="col col-md-1 smallpics">
         <img src="https://cdn.pixabay.com/photo/2018/02/24/17/17/window-3178666_960_720.jpg" class="imgh">
       </div>
-      <div class="col col-md-1">
+      <div class="col col-md-1 smallpics">
         <img src="https://cdn.pixabay.com/photo/2018/02/24/17/17/window-3178666_960_720.jpg" class="imgh">
       </div>
-      <div class="col col-md-1">
+      <div class="col col-md-1 smallpics">
         <img src="https://cdn.pixabay.com/photo/2018/02/24/17/17/window-3178666_960_720.jpg" class="imgh">
       </div>
 
 
-      <div class="col col-md-1">
+      <div class="col col-md-1 smallpics">
         <img src="https://cdn.pixabay.com/photo/2018/02/24/17/17/window-3178666_960_720.jpg" class="imgh">
       </div>
       <div class="col col-md-3"> </div>
     </div>
   </div>
 
+  <div id="horizontalotelcart"> </div>
+
+
+  <!-- 
   <div class="container">
 
     <div id="search-list">
@@ -212,26 +209,17 @@
       </div>
     </div>
 
-    
+    -->
 
-<script>
-$(function() {
-  $('input[name="daterange"]').daterangepicker({
-    opens: 'left'
-  }, function(start, end, label) {
-    console.log("A new date selection was made: " + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD'));
-  });
-});
-</script>
 
-  
-    <script src="script.js">  </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"></script>
+
+  <script src="script.js">  </script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
